# serena

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  compose.yaml  docker_build_and_run.sh  flake.nix  lessons_learned.md  llms-install.md  myproject.demo.yml  myproject.template.yml  project.template.yml  pyproject.toml  pytest.ini  roadmap.md  serena_config.template.yml  test_make_tool.py  verify_fix.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: all-issues.md  general-issue-template.md  general-issue.md  issue--bug--performance-problem--question-.md
.github/workflows/: codespell.yml  common_steps.yml  docker.yml  lint_and_docs.yaml  publish.yaml  publish.yml  pytest.yml  windows_mac_test.yml
.serena/: project.yml
.serena/memories/: adding_new_language_support_guide.md  current_solid_lsp_architecture.md  deadlock_analysis_mcp_symbolic_tools.md  language_servers.md  multilspy_historical_context.md  process_isolation_current_status.md  project_structure.md  serena_core_concepts_and_architecture.md  serena_project_structure.md  serena_repository_structure.md  solid-lsp-architecture.md  suggested_commands.md  supported_language_servers.md
code_templates/: prompt_factory_template.py
config/contexts/: agent.yml  desktop-app.yml  ide-assistant.yml
config/modes/: editing.yml  interactive.yml  onboarding.yml  one-shot.yml  planning.yml
config/prompt_templates/: simple_tool_outputs.yml  system_prompt.yml
dashboard/: dashboard.js  index.html
docs/: _config.yml  autogen_rst.py  custom_agent.md  index.rst  read_only_mode.md  serena_on_chatgpt.md  spelling_wordlist.txt
docs/02_notebooks/: 00_intro.md  01_library_example.ipynb
docs/04_contributing/: 04_contributing.rst
prompts/: mcp_prompts.yml
prompts/contexts/: agent.yml  desktop-app.yml  ide-assistant.yml
prompts/modes/: editing.yml  interactive.yml  one-shot.yml  planning.yml
resources/: serena-icons.cdr  serena-logo.cdr
scripts/: agno_agent.py  demo_run_tools.py  gen_prompt_factory.py  list_tools.py  mcp_server.py  print_mode_context_options.py  print_tool_overview.py  run_sample.py
src/: README.md
src/interprompt/: .syncCommitId.remote  .syncCommitId.this  README.md  __init__.py  jinja_template.py  multilang_prompt.py  prompt_factory.py  promt_template.py
src/interprompt/util/: class_decorators.py
src/multilspy/: .syncCommitId.remote  .syncCommitId.this  __init__.py  language_server.py  multilspy_config.py  multilspy_logger.py  multilspy_types.py  multilspy_utils.py
src/multilspy/lsp_protocol_handler/: lsp_types.py  server.py
src/serena/: __init__.py  agent.py  agno.py  analytics.py  cli.py  code_editor.py  config.py  constants.py  dashboard.py  editingtool.py  gui_log_viewer.py  mcp.py  process_isolated_agent.py  project.py  prompt_factory.py  sample_module.py  symbol.py  text_utils.py  tools.py
src/serena/config/: context_mode.py  serena_config.py
src/serena/llm/: jinja_template.py  multilang_prompt.py  prompt_factory.py
src/serena/resources/: project.template.yml  serena_config.template.yml
src/serena/tools/: __init__.py  cmd_tools.py  config_tools.py  file_tools.py  jetbrains_plugin_client.py  jetbrains_tools.py  ls_tools.py  memory_tools.py  symbol_tools.py  tools_base.py  workflow_tools.py
src/serena/util/: class_decorators.py  config_loader.py  exception.py  file_system.py  general.py  git.py  inspection.py  logging.py  shell.py  thread.py
src/solidlsp/: .gitignore  __init__.py  ls.py  ls_config.py  ls_exceptions.py  ls_handler.py  ls_logger.py  ls_request.py  ls_types.py  ls_utils.py  lsp_request.py  multilspy_config.py  multilspy_logger.py  multilspy_settings.py  multilspy_utils.py  settings.py  type_helpers.py
src/solidlsp/language_servers/: bash_language_server.py  clangd_language_server.py  clojure_lsp.py  common.py  csharp_language_server.py  dart_language_server.py  eclipse_jdtls.py  erlang_language_server.py  gopls.py  intelephense.py  jedi_server.py  kotlin_language_server.py  lua_ls.py  nixd_ls.py  omnisharp.py  pyright_server.py  r_language_server.py  ruby_lsp.py  rust_analyzer.py  solargraph.py  sourcekit_lsp.py  terraform_ls.py  typescript_language_server.py  vts_language_server.py  zls.py
src/solidlsp/lsp_protocol_handler/: lsp_constants.py  lsp_requests.py  lsp_types.py  server.py
src/solidlsp/util/: subprocess_util.py  zip.py
test/: conftest.py  test_edit_marker.py
test/multilspy/: test_basic.py  test_language_server_basic.py  test_language_server_symbols.py  test_retrieval_with_ignored_dirs.py  test_symbol_retrieval.py
test/serena/: test_config_loader.py  test_edit_marker.py  test_make_tool_process_isolation.py  test_mcp.py  test_sample_class.py  test_serena_agent.py  test_symbol.py  test_symbol_editing.py  test_text_utils.py  test_tool_parameter_types.py
(+221 files in other folders)
